# aws-credentials-manager

./: .gitignore  .pre-commit-config.yaml  README.md  apm.py  apm.sh  pyproject.toml  setup.cfg
src/: commands.py  exceptions.py  helpers.py
src/acm/: commands.py  config.py  exceptions.py  files.py  helpers.py  main.py
src/acm/store/: helpers.py  models.py  utils.py
