[tool.poetry]
name = "aws-credentials-manager"
version = "0.1.0"
description = ""
authors = ["michaldrozdz <mich0232@gmail.com>"]
readme = "README.md"
packages = [{include = "aws_credentials_manager"}]

[tool.poetry.dependencies]
python = "^3.9"
click = "8.1.3"

[tool.poetry.group.dev.dependencies]
pre-commit = "3.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
