[project]
name = "aws_credentials_manager"
version = "0.2.1"
description = ""
authors = [{ name = "michaldrozdz", email = "mich0232@gmail.com" }]
requires-python = ">=3.9,<4"
readme = "README.md"
dependencies = [
    "click==8.1.3",
    "pydantic>=2.12.5",
]

[project.scripts]
acm = "acm.main:cli"

[dependency-groups]
dev = ["pre-commit==3.1.1"]

[tool.hatch.build]
sources = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["acm"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
